# GhciSafe

./: Makefile  README.md  ghci.cabal
ghci-safe/: Main.hs
src/: HsVersions.h  InteractiveUI.hs
